# neutryx-rust

./: .clauderc.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit_rust_sdd_gap.py  cliff.toml  gap_report_rust.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/analytical-models/: tasks.md
.kiro/specs/checkpointing-path-dependent-ad/: tasks.md
.kiro/specs/core-traits-types/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/core-traits-types-2/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/crate-architecture-redesign/: design.md  gap-analysis.md  requirements.md  research.md  tasks.md
.kiro/specs/enzyme-infrastructure-setup/: design.md  requirements.md  research.md  spec.json
.kiro/specs/frictional-bank/: spec.json  tasks.md
.kiro/specs/frictional-bank-demo/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/instrument-definitions/: requirements.md  spec.json
.kiro/specs/interpolation-solvers/: requirements.md  spec.json  tasks.md
.kiro/specs/lazy-arc-pricing-kernel/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/market-data-structures/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/math-foundation-phase1/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/monte-carlo-kernel-enzyme/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/portfolio-aggregation/: spec.json
.kiro/specs/production-hardening-phase6/: tasks.md
.kiro/specs/rng-infrastructure/: gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/service-layer-rename/: MIGRATION.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/stochastic-models-enzyme-ad/: design.md  spec.json  tasks.md
.kiro/specs/tier1-production-pricer/: design.md  requirements.md
.kiro/specs/web-api-server/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/xva-metrics/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  roadmap.md  structure.md  tech.md
crates/adapter_feeds/: Cargo.toml
crates/adapter_feeds/src/: lib.rs  quote.rs
crates/adapter_fpml/: Cargo.toml
crates/adapter_fpml/src/: error.rs  lib.rs  parser.rs
crates/adapter_loader/: Cargo.toml
crates/adapter_loader/src/: csa.rs  csv_loader.rs  error.rs  lib.rs
crates/infra_config/: Cargo.toml
crates/infra_config/src/: error.rs  lib.rs  settings.rs
crates/infra_master/: Cargo.toml
crates/infra_master/src/: calendar.rs  day_count.rs  error.rs  lib.rs
crates/infra_store/: Cargo.toml
crates/infra_store/src/: error.rs  lib.rs  postgres.rs  traits.rs
crates/pricer_core/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  VERIFICATION_CHECKLIST.md
crates/pricer_core/benches/: core_benchmarks.rs
crates/pricer_core/proptest-regressions/math/: smoothing.txt
crates/pricer_core/src/: lib.rs
crates/pricer_core/src/market_data/curves/: flat.rs
crates/pricer_core/src/market_data/surfaces/: interpolated.rs
crates/pricer_core/src/math/: mod.rs  smoothing.rs
crates/pricer_core/src/math/interpolators/: ad_tests.rs  bilinear.rs  cubic_spline.rs  linear.rs  mod.rs  monotonic.rs  smooth_interp.rs  traits.rs
crates/pricer_core/src/math/solvers/: brent.rs  config.rs  levenberg_marquardt.rs  mod.rs  newton_raphson.rs
crates/pricer_core/src/traits/: calibration.rs  mod.rs  priceable.rs
crates/pricer_core/src/types/: dual.rs  error.rs  mod.rs  time.rs
crates/pricer_core/tests/: integration_test.rs
crates/pricer_engine/: Cargo.toml  build.rs
crates/pricer_engine/benches/: engine_benchmarks.rs  engine_iai.rs
crates/pricer_engine/src/: lib.rs
crates/pricer_engine/tests/: analytical_comparison.rs  e2e_path_dependent.rs  l1_l2_integration.rs
crates/pricer_kernel/: Cargo.toml  build.rs  rust-toolchain.toml
crates/pricer_kernel/benches/: kernel_benchmarks.rs
crates/pricer_kernel/src/: lib.rs
crates/pricer_kernel/src/checkpoint/: mod.rs  strategy.rs
crates/pricer_kernel/src/enzyme/: mod.rs
crates/pricer_kernel/src/greeks/: config.rs
crates/pricer_kernel/src/mc/: config.rs  mod.rs  paths.rs  payoff.rs  pricer.rs  workspace.rs
crates/pricer_kernel/src/path_dependent/: observer.rs  payoff.rs  payoff_type.rs
crates/pricer_kernel/src/rng/: mod.rs  prng.rs  qmc.rs  tests.rs
crates/pricer_kernel/src/verify/: mod.rs
crates/pricer_models/: Cargo.toml
crates/pricer_models/benches/: models_benchmarks.rs
crates/pricer_optimiser/: Cargo.toml
crates/pricer_optimiser/benches/: optimiser_benchmarks.rs
crates/pricer_optimiser/src/: error.rs  lib.rs
crates/pricer_pricing/: PHASE_3_0_SUMMARY.md
crates/pricer_pricing/src/: lib.rs
crates/pricer_risk/: Cargo.toml
crates/pricer_risk/benches/: risk_benchmarks.rs
crates/pricer_risk/src/: lib.rs
crates/pricer_xva/: Cargo.toml
crates/runtime_cli/: Cargo.toml
crates/runtime_cli/src/: config.rs  (+1 more)
crates/runtime_python/: Cargo.toml
crates/runtime_server/: Cargo.toml
crates/service_cli/: Cargo.toml
crates/service_cli/src/: config.rs  error.rs  main.rs
crates/service_cli/src/commands/: check.rs  mod.rs
crates/service_gateway/: Cargo.toml  build.rs
crates/service_gateway/src/: config.rs  main.rs
crates/service_gateway/src/rest/: handlers.rs  mod.rs
crates/service_python/: Cargo.toml
crates/service_python/src/: bindings.rs  lib.rs
demo/downstream_systems/: Cargo.toml
demo/frictional_bank/: Cargo.toml
demo/gui/: Cargo.toml  Shuttle.toml
demo/gui/src/: app.rs  lib.rs  screens.rs  shuttle_main.rs  shuttle_web.rs
demo/gui/src/web/: handlers.rs  mod.rs
demo/gui/static/: app.js  index.html  style.css
demo/upstream_systems/: Cargo.toml
docker/: Dockerfile.nightly  Dockerfile.stable
docs/demo/: FRICTIONAL_BANK_SPEC.md
docs/design/: SDD.md
scripts/: check_iai_regression.sh  install_enzyme.sh  verify_enzyme.sh
(+110 files in other folders)
