[package]
name = "adapter_feeds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Real-time and snapshot market data parsers for Neutryx"

[dependencies]
# Types from Pricer layer
pricer_core = { path = "../pricer_core" }

# Master data from Infra layer
infra_master = { path = "../infra_master" }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true, optional = true }

# Async runtime (optional)
tokio = { version = "1.0", features = ["rt-multi-thread", "net"], optional = true }

[features]
default = []
serde = ["dep:serde", "pricer_core/serde"]
async = ["dep:tokio"]

[dev-dependencies]
approx.workspace = true
