[package]
name = "adapter_fpml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FpML and XML trade definition parsers for Neutryx"

[dependencies]
# Types from Pricer layer
pricer_core = { path = "../pricer_core" }
pricer_models = { path = "../pricer_models" }

# Master data from Infra layer
infra_master = { path = "../infra_master" }

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "pricer_core/serde", "pricer_models/serde"]

[dev-dependencies]
approx.workspace = true
