[package]
name = "adapter_loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Flat file loaders (CSV/Parquet) and CSA details for Neutryx"

[dependencies]
# Types from Pricer layer
pricer_core = { path = "../pricer_core" }

# Master data from Infra layer
infra_master = { path = "../infra_master" }

# CSV parsing
csv = "1.3"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true, optional = true }

# Parquet support (optional)
parquet = { version = "54", optional = true }
arrow = { version = "54", optional = true }

[features]
default = []
serde = ["dep:serde", "pricer_core/serde"]
parquet = ["dep:parquet", "dep:arrow"]

[dev-dependencies]
approx.workspace = true
