[package]
name = "infra_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "System configuration and environment management for Neutryx"

[dependencies]
# Configuration management
config = { version = "0.14", default-features = false, features = ["toml", "yaml"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true }

# System utilities
num_cpus.workspace = true

[features]
default = []

[dev-dependencies]
approx.workspace = true
