[package]
name = "infra_master"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Static master data (Calendars, Currencies, ISINs) for Neutryx"

[dependencies]
# Date/time handling
chrono = { workspace = true }

# Error handling
thiserror.workspace = true

# Serialisation
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
approx.workspace = true
