[package]
name = "infra_store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Persistence and state management (SQLx, Redis, TimeScale) for Neutryx"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

# Database (optional features)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true }

# Async trait
async-trait = { version = "0.1", optional = true }

[features]
default = []
postgres = ["dep:sqlx", "dep:tokio", "dep:async-trait"]
redis = ["dep:tokio", "dep:async-trait"]

[dev-dependencies]
approx.workspace = true
