[package]
name = "pricer_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-traits.workspace = true
num-dual = { workspace = true, optional = true }
chrono = { workspace = true, features = [] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "core_benchmarks"
harness = false

[features]
default = ["num-dual-mode", "serde"]
num-dual-mode = ["dep:num-dual"]  # Verification mode with dual numbers
enzyme-mode = []                   # Production mode (Enzyme AD)
serde = ["dep:serde", "chrono/serde"]  # Serialisation support
