[package]
name = "pricer_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Phase 3.0: NO dependencies on other pricer_* crates (complete isolation)
# LLVM 18 bindings for Enzyme support
llvm-sys = "180"

# Basic numeric traits
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true

[build-dependencies]
# Future: For linking Enzyme LLVM plugin
# cc = "1.0"

[features]
default = []
# Future: enzyme-ad feature for actual Enzyme integration
enzyme-ad = []
