[package]
name = "service_cli"
description = "Command Line Operations for Neutryx XVA Pricing Library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
num_cpus = "1.16"
rayon.workspace = true

# Internal dependencies (following A-I-P-S: S depends on P, I, A)
pricer_core = { path = "../pricer_core" }
pricer_models = { path = "../pricer_models" }
pricer_optimiser = { path = "../pricer_optimiser" }
pricer_pricing = { path = "../pricer_pricing" }
pricer_risk = { path = "../pricer_risk" }
infra_config = { path = "../infra_config" }
infra_master = { path = "../infra_master" }
infra_store = { path = "../infra_store" }
adapter_feeds = { path = "../adapter_feeds" }
adapter_fpml = { path = "../adapter_fpml" }
adapter_loader = { path = "../adapter_loader" }

[[bin]]
name = "neutryx"
path = "src/main.rs"

[features]
default = []
enzyme-ad = []

[dev-dependencies]
tempfile = "3.10"
