[package]
name = "service_python"
description = "PyO3 Python Bindings for Neutryx XVA Pricing Library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "neutryx"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Workspace dependencies
thiserror.workspace = true
num-traits.workspace = true

# Internal dependencies (following A-I-P-S: S depends on P, I, A)
pricer_core = { path = "../pricer_core" }
pricer_models = { path = "../pricer_models" }
pricer_optimiser = { path = "../pricer_optimiser" }
pricer_pricing = { path = "../pricer_pricing" }
pricer_risk = { path = "../pricer_risk" }
infra_config = { path = "../infra_config" }
infra_master = { path = "../infra_master" }

[features]
default = []
# Enable Enzyme AD support (requires nightly + LLVM)
enzyme-ad = ["pricer_pricing/enzyme-ad"]

[dev-dependencies]
